# doc-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_extraction.py  test_vision.py
agents/: analyst.md  organizer.md  scanner.md  summarizer.md  taxonomy.md  writer.md
doc_manager/: config.py  graph.py  state.py
doc_manager/agents/: analyst.py  collector.py  orchestrator.py  organizer.py  scanner.py  summarizer.py  taxonomy.py  writer.py
doc_manager/tools/: file_ops.py  pdf_reader.py
