[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pdfplumber>=0.11",
    "openai>=1.30",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "rich>=13.0",
]

[project.scripts]
doc-manager = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["doc_manager"]
